// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`end-to-end test generates the same code for pet store that it did on the last test run 1`] = `
"routes/pet.ts:import type { HTTP_POST } from "../types/paths/pet.types.js";
import type { HTTP_PUT } from "../types/paths/pet.types.js";

export const POST: HTTP_POST = ($) => {
  return $.response[200].random();
};

export const PUT: HTTP_PUT = ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 2`] = `
"types/paths/pet.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq-generated-code.md

import type { WideOperationArgument } from "../../types.ts";
import type { OmitValueWhenNever } from "../../types.ts";
import type { COUNTERFACT_RESPONSE } from "../../types.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../types.ts";
import type { Pet } from "../components/schemas/Pet.js";

export type HTTP_POST = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    body: Pet;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/xml": {
            schema: Pet;
          };
          "application/json": {
            schema: Pet;
          };
        };
      };
      405: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
  }>,
) =>
  | {
      status: 200;
      contentType?: "application/xml";
      body?: Pet;
    }
  | {
      status: 200;
      contentType?: "application/json";
      body?: Pet;
    }
  | {
      status: 405;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE };

export type HTTP_PUT = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    body: Pet;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/xml": {
            schema: Pet;
          };
          "application/json": {
            schema: Pet;
          };
        };
      };
      400: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
      404: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
      405: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
  }>,
) =>
  | {
      status: 200;
      contentType?: "application/xml";
      body?: Pet;
    }
  | {
      status: 200;
      contentType?: "application/json";
      body?: Pet;
    }
  | {
      status: 400;
    }
  | {
      status: 404;
    }
  | {
      status: 405;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE };
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 3`] = `
"routes/pet/findByStatus.ts:import type { HTTP_GET } from "../../types/paths/pet/findByStatus.types.js";

export const GET: HTTP_GET = ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 4`] = `
"types/paths/pet/findByStatus.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq-generated-code.md

import type { WideOperationArgument } from "../../../types.ts";
import type { OmitValueWhenNever } from "../../../types.ts";
import type { COUNTERFACT_RESPONSE } from "../../../types.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../types.ts";
import type { Pet } from "../../components/schemas/Pet.js";

export type HTTP_GET = (
  $: OmitValueWhenNever<{
    query: { status?: "available" | "pending" | "sold" };
    path: never;
    headers: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/xml": {
            schema: Array<Pet>;
          };
          "application/json": {
            schema: Array<Pet>;
          };
        };
      };
      400: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
  }>,
) =>
  | {
      status: 200;
      contentType?: "application/xml";
      body?: Array<Pet>;
    }
  | {
      status: 200;
      contentType?: "application/json";
      body?: Array<Pet>;
    }
  | {
      status: 400;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE };
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 5`] = `
"routes/pet/findByTags.ts:import type { HTTP_GET } from "../../types/paths/pet/findByTags.types.js";

export const GET: HTTP_GET = ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 6`] = `
"types/paths/pet/findByTags.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq-generated-code.md

import type { WideOperationArgument } from "../../../types.ts";
import type { OmitValueWhenNever } from "../../../types.ts";
import type { COUNTERFACT_RESPONSE } from "../../../types.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../types.ts";
import type { Pet } from "../../components/schemas/Pet.js";

export type HTTP_GET = (
  $: OmitValueWhenNever<{
    query: { tags?: Array<string> };
    path: never;
    headers: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/xml": {
            schema: Array<Pet>;
          };
          "application/json": {
            schema: Array<Pet>;
          };
        };
      };
      400: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
  }>,
) =>
  | {
      status: 200;
      contentType?: "application/xml";
      body?: Array<Pet>;
    }
  | {
      status: 200;
      contentType?: "application/json";
      body?: Array<Pet>;
    }
  | {
      status: 400;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE };
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 7`] = `
"routes/pet/{petId}.ts:import type { HTTP_GET } from "../../types/paths/pet/{petId}.types.js";
import type { HTTP_POST } from "../../types/paths/pet/{petId}.types.js";
import type { HTTP_DELETE } from "../../types/paths/pet/{petId}.types.js";

export const GET: HTTP_GET = ($) => {
  return $.response[200].random();
};

export const POST: HTTP_POST = ($) => {
  return $.response[405];
};

export const DELETE: HTTP_DELETE = ($) => {
  return $.response[400];
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 8`] = `
"types/paths/pet/{petId}.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq-generated-code.md

import type { WideOperationArgument } from "../../../types.ts";
import type { OmitValueWhenNever } from "../../../types.ts";
import type { COUNTERFACT_RESPONSE } from "../../../types.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../types.ts";
import type { Pet } from "../../components/schemas/Pet.js";

export type HTTP_GET = (
  $: OmitValueWhenNever<{
    query: never;
    path: { petId: number };
    headers: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/xml": {
            schema: Pet;
          };
          "application/json": {
            schema: Pet;
          };
        };
      };
      400: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
      404: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
  }>,
) =>
  | {
      status: 200;
      contentType?: "application/xml";
      body?: Pet;
    }
  | {
      status: 200;
      contentType?: "application/json";
      body?: Pet;
    }
  | {
      status: 400;
    }
  | {
      status: 404;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE };

export type HTTP_POST = (
  $: OmitValueWhenNever<{
    query: { name?: string; status?: string };
    path: { petId: number };
    headers: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      405: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
  }>,
) =>
  | {
      status: 405;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE };

export type HTTP_DELETE = (
  $: OmitValueWhenNever<{
    query: never;
    path: { petId: number };
    headers: { api_key?: string };
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      400: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
  }>,
) =>
  | {
      status: 400;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE };
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 9`] = `
"routes/pet/{petId}/uploadImage.ts:import type { HTTP_POST } from "../../../types/paths/pet/{petId}/uploadImage.types.js";

export const POST: HTTP_POST = ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 10`] = `
"types/paths/pet/{petId}/uploadImage.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq-generated-code.md

import type { WideOperationArgument } from "../../../../types.ts";
import type { OmitValueWhenNever } from "../../../../types.ts";
import type { COUNTERFACT_RESPONSE } from "../../../../types.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../../types.ts";
import type { ApiResponse } from "../../../components/schemas/ApiResponse.js";

export type HTTP_POST = (
  $: OmitValueWhenNever<{
    query: { additionalMetadata?: string };
    path: { petId: number };
    headers: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/json": {
            schema: ApiResponse;
          };
        };
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
  }>,
) =>
  | {
      status: 200;
      contentType?: "application/json";
      body?: ApiResponse;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE };
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 11`] = `
"routes/store/inventory.ts:import type { HTTP_GET } from "../../types/paths/store/inventory.types.js";

export const GET: HTTP_GET = ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 12`] = `
"types/paths/store/inventory.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq-generated-code.md

import type { WideOperationArgument } from "../../../types.ts";
import type { OmitValueWhenNever } from "../../../types.ts";
import type { COUNTERFACT_RESPONSE } from "../../../types.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../types.ts";

export type HTTP_GET = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/json": {
            schema: { [key: string]: number };
          };
        };
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
  }>,
) =>
  | {
      status: 200;
      contentType?: "application/json";
      body?: { [key: string]: number };
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE };
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 13`] = `
"routes/store/order.ts:import type { HTTP_POST } from "../../types/paths/store/order.types.js";

export const POST: HTTP_POST = ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 14`] = `
"types/paths/store/order.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq-generated-code.md

import type { WideOperationArgument } from "../../../types.ts";
import type { OmitValueWhenNever } from "../../../types.ts";
import type { COUNTERFACT_RESPONSE } from "../../../types.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../types.ts";
import type { Order } from "../../components/schemas/Order.js";

export type HTTP_POST = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    body: Order;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/json": {
            schema: Order;
          };
        };
      };
      405: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
  }>,
) =>
  | {
      status: 200;
      contentType?: "application/json";
      body?: Order;
    }
  | {
      status: 405;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE };
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 15`] = `
"routes/store/order/{orderId}.ts:import type { HTTP_GET } from "../../../types/paths/store/order/{orderId}.types.js";
import type { HTTP_DELETE } from "../../../types/paths/store/order/{orderId}.types.js";

export const GET: HTTP_GET = ($) => {
  return $.response[200].random();
};

export const DELETE: HTTP_DELETE = ($) => {
  return $.response[400];
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 16`] = `
"types/paths/store/order/{orderId}.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq-generated-code.md

import type { WideOperationArgument } from "../../../../types.ts";
import type { OmitValueWhenNever } from "../../../../types.ts";
import type { COUNTERFACT_RESPONSE } from "../../../../types.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../../types.ts";
import type { Order } from "../../../components/schemas/Order.js";

export type HTTP_GET = (
  $: OmitValueWhenNever<{
    query: never;
    path: { orderId: number };
    headers: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/xml": {
            schema: Order;
          };
          "application/json": {
            schema: Order;
          };
        };
      };
      400: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
      404: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
  }>,
) =>
  | {
      status: 200;
      contentType?: "application/xml";
      body?: Order;
    }
  | {
      status: 200;
      contentType?: "application/json";
      body?: Order;
    }
  | {
      status: 400;
    }
  | {
      status: 404;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE };

export type HTTP_DELETE = (
  $: OmitValueWhenNever<{
    query: never;
    path: { orderId: number };
    headers: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      400: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
      404: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
  }>,
) =>
  | {
      status: 400;
    }
  | {
      status: 404;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE };
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 17`] = `
"routes/user.ts:import type { HTTP_POST } from "../types/paths/user.types.js";

export const POST: HTTP_POST = ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 18`] = `
"types/paths/user.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq-generated-code.md

import type { WideOperationArgument } from "../../types.ts";
import type { OmitValueWhenNever } from "../../types.ts";
import type { COUNTERFACT_RESPONSE } from "../../types.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../types.ts";
import type { HttpStatusCode } from "../../types.ts";
import type { User } from "../components/schemas/User.js";

export type HTTP_POST = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    body: User;
    context: Context;
    response: ResponseBuilderFactory<{
      [statusCode in HttpStatusCode]: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/json": {
            schema: User;
          };
          "application/xml": {
            schema: User;
          };
        };
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
  }>,
) =>
  | {
      status: number | undefined;
      contentType?: "application/json";
      body?: User;
    }
  | {
      status: number | undefined;
      contentType?: "application/xml";
      body?: User;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE };
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 19`] = `
"routes/user/createWithList.ts:import type { HTTP_POST } from "../../types/paths/user/createWithList.types.js";

export const POST: HTTP_POST = ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 20`] = `
"types/paths/user/createWithList.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq-generated-code.md

import type { WideOperationArgument } from "../../../types.ts";
import type { OmitValueWhenNever } from "../../../types.ts";
import type { COUNTERFACT_RESPONSE } from "../../../types.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../types.ts";
import type { HttpStatusCode } from "../../../types.ts";
import type { User } from "../../components/schemas/User.js";

export type HTTP_POST = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    body: Array<User>;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/xml": {
            schema: User;
          };
          "application/json": {
            schema: User;
          };
        };
      };
      [statusCode in Exclude<HttpStatusCode, 200>]: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
  }>,
) =>
  | {
      status: 200;
      contentType?: "application/xml";
      body?: User;
    }
  | {
      status: 200;
      contentType?: "application/json";
      body?: User;
    }
  | {
      status: number | undefined;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE };
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 21`] = `
"routes/user/login.ts:import type { HTTP_GET } from "../../types/paths/user/login.types.js";

export const GET: HTTP_GET = ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 22`] = `
"types/paths/user/login.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq-generated-code.md

import type { WideOperationArgument } from "../../../types.ts";
import type { OmitValueWhenNever } from "../../../types.ts";
import type { COUNTERFACT_RESPONSE } from "../../../types.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../types.ts";

export type HTTP_GET = (
  $: OmitValueWhenNever<{
    query: { username?: string; password?: string };
    path: never;
    headers: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: {
          "X-Rate-Limit": { schema: number };
          "X-Expires-After": { schema: string };
        };
        requiredHeaders: never;
        content: {
          "application/xml": {
            schema: string;
          };
          "application/json": {
            schema: string;
          };
        };
      };
      400: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
  }>,
) =>
  | {
      status: 200;
      contentType?: "application/xml";
      body?: string;
    }
  | {
      status: 200;
      contentType?: "application/json";
      body?: string;
    }
  | {
      status: 400;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE };
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 23`] = `
"routes/user/logout.ts:import type { HTTP_GET } from "../../types/paths/user/logout.types.js";

export const GET: HTTP_GET = ($) => {
  return $.response[200];
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 24`] = `
"types/paths/user/logout.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq-generated-code.md

import type { WideOperationArgument } from "../../../types.ts";
import type { OmitValueWhenNever } from "../../../types.ts";
import type { COUNTERFACT_RESPONSE } from "../../../types.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../types.ts";
import type { HttpStatusCode } from "../../../types.ts";

export type HTTP_GET = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      [statusCode in HttpStatusCode]: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
  }>,
) =>
  | {
      status: number | undefined;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE };
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 25`] = `
"routes/user/{username}.ts:import type { HTTP_GET } from "../../types/paths/user/{username}.types.js";
import type { HTTP_PUT } from "../../types/paths/user/{username}.types.js";
import type { HTTP_DELETE } from "../../types/paths/user/{username}.types.js";

export const GET: HTTP_GET = ($) => {
  return $.response[200].random();
};

export const PUT: HTTP_PUT = ($) => {
  return $.response[200];
};

export const DELETE: HTTP_DELETE = ($) => {
  return $.response[400];
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 26`] = `
"types/paths/user/{username}.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq-generated-code.md

import type { WideOperationArgument } from "../../../types.ts";
import type { OmitValueWhenNever } from "../../../types.ts";
import type { COUNTERFACT_RESPONSE } from "../../../types.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../types.ts";
import type { HttpStatusCode } from "../../../types.ts";
import type { User } from "../../components/schemas/User.js";

export type HTTP_GET = (
  $: OmitValueWhenNever<{
    query: never;
    path: { username: string };
    headers: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/xml": {
            schema: User;
          };
          "application/json": {
            schema: User;
          };
        };
      };
      400: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
      404: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
  }>,
) =>
  | {
      status: 200;
      contentType?: "application/xml";
      body?: User;
    }
  | {
      status: 200;
      contentType?: "application/json";
      body?: User;
    }
  | {
      status: 400;
    }
  | {
      status: 404;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE };

export type HTTP_PUT = (
  $: OmitValueWhenNever<{
    query: never;
    path: { username: string };
    headers: never;
    body: User;
    context: Context;
    response: ResponseBuilderFactory<{
      [statusCode in HttpStatusCode]: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
  }>,
) =>
  | {
      status: number | undefined;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE };

export type HTTP_DELETE = (
  $: OmitValueWhenNever<{
    query: never;
    path: { username: string };
    headers: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      400: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
      404: {
        headers: never;
        requiredHeaders: never;
        content: never;
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: never;
  }>,
) =>
  | {
      status: 400;
    }
  | {
      status: 404;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE };
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 27`] = `
"types/components/schemas/Pet.ts:import type { Category } from "./Category.js";
import type { Tag } from "./Tag.js";

export type Pet = {
  id?: number;
  name: string;
  category?: Category;
  photoUrls: Array<string>;
  tags?: Array<Tag>;
  status?: "available" | "pending" | "sold";
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 28`] = `
"types/components/schemas/ApiResponse.ts:export type ApiResponse = { code?: number; type?: string; message?: string };
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 29`] = `
"types/components/schemas/Order.ts:export type Order = {
  id?: number;
  petId?: number;
  quantity?: number;
  shipDate?: string;
  status?: "placed" | "approved" | "delivered";
  complete?: boolean;
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 30`] = `
"types/components/schemas/User.ts:export type User = {
  id?: number;
  username?: string;
  firstName?: string;
  lastName?: string;
  email?: string;
  password?: string;
  phone?: string;
  userStatus?: number;
};
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 31`] = `
"types/components/schemas/Category.ts:export type Category = { id?: number; name?: string };
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 32`] = `
"types/components/schemas/Tag.ts:export type Tag = { id?: number; name?: string };
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 33`] = `
".cache
"
`;

exports[`end-to-end test generates the same code for pet store that it did on the last test run 34`] = `
"This directory contains compiled JS files from the paths directory. Do not edit these files directly.
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 1`] = `
"routes/index.ts:import type { HTTP_GET } from "../types/paths/index.types.js";

export const GET: HTTP_GET = ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 2`] = `
"types/paths/index.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq-generated-code.md

import type { WideOperationArgument } from "../../types.ts";
import type { OmitValueWhenNever } from "../../types.ts";
import type { COUNTERFACT_RESPONSE } from "../../types.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../types.ts";
import type { HttpStatusCode } from "../../types.ts";

export type HTTP_GET = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      [statusCode in HttpStatusCode]: {
        headers: never;
        requiredHeaders: never;
        content: {
          "text/plain": {
            schema: string;
          };
        };
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: { username?: string; password?: string };
  }>,
) =>
  | {
      status: number | undefined;
      contentType?: "text/plain";
      body?: string;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE };
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 3`] = `
"routes/count.ts:import type { HTTP_GET } from "../types/paths/count.types.js";

export const GET: HTTP_GET = ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 4`] = `
"types/paths/count.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq-generated-code.md

import type { WideOperationArgument } from "../../types.ts";
import type { OmitValueWhenNever } from "../../types.ts";
import type { COUNTERFACT_RESPONSE } from "../../types.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../types.ts";
import type { HttpStatusCode } from "../../types.ts";

export type HTTP_GET = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      [statusCode in HttpStatusCode]: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/json": {
            schema: string;
          };
        };
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: { username?: string; password?: string };
  }>,
) =>
  | {
      status: number | undefined;
      contentType?: "application/json";
      body?: string;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE };
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 5`] = `
"routes/hello/kitty.ts:import type { HTTP_GET } from "../../types/paths/hello/kitty.types.js";

export const GET: HTTP_GET = ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 6`] = `
"types/paths/hello/kitty.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq-generated-code.md

import type { WideOperationArgument } from "../../../types.ts";
import type { OmitValueWhenNever } from "../../../types.ts";
import type { COUNTERFACT_RESPONSE } from "../../../types.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../types.ts";
import type { HttpStatusCode } from "../../../types.ts";

export type HTTP_GET = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      [statusCode in HttpStatusCode]: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/json": {
            schema: string;
          };
        };
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: { username?: string; password?: string };
  }>,
) =>
  | {
      status: number | undefined;
      contentType?: "application/json";
      body?: string;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE };
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 7`] = `
"routes/hello/{name}.ts:import type { HTTP_GET } from "../../types/paths/hello/{name}.types.js";

export const GET: HTTP_GET = ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 8`] = `
"types/paths/hello/{name}.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq-generated-code.md

import type { WideOperationArgument } from "../../../types.ts";
import type { OmitValueWhenNever } from "../../../types.ts";
import type { COUNTERFACT_RESPONSE } from "../../../types.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../../types.ts";
import type { HttpStatusCode } from "../../../types.ts";

export type HTTP_GET = (
  $: OmitValueWhenNever<{
    query: never;
    path: { name: string };
    headers: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      [statusCode in HttpStatusCode]: {
        headers: {
          "x-test": { schema: string };
        };
        requiredHeaders: never;
        content: {
          "application/json": {
            schema: string;
          };
        };
      };
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: { username?: string; password?: string };
  }>,
) =>
  | {
      status: number | undefined;
      contentType?: "application/json";
      body?: string;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE };
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 9`] = `
"routes/path-one.ts:import type { HTTP_GET } from "../types/paths/path-one.types.js";

export const GET: HTTP_GET = ($) => {
  return $.response[200].random();
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 10`] = `
"types/paths/path-one.types.ts:// This code was automatically generated from an OpenAPI description.
// Do not edit this file. Edit the OpenAPI file instead.
// For more information, see https://github.com/pmcelhaney/counterfact/blob/main/docs/faq-generated-code.md

import type { WideOperationArgument } from "../../types.ts";
import type { OmitValueWhenNever } from "../../types.ts";
import type { COUNTERFACT_RESPONSE } from "../../types.ts";
import type { Context } from "@@CONTEXT_FILE_TOKEN@@";
import type { ResponseBuilderFactory } from "../../types.ts";
import type { Recursive } from "../components/schemas/Recursive.js";
import type { BadRequest } from "../#/components/responses/BadRequest.js";
import type { Error } from "../components/schemas/Error.js";

export type HTTP_GET = (
  $: OmitValueWhenNever<{
    query: never;
    path: never;
    headers: never;
    body: never;
    context: Context;
    response: ResponseBuilderFactory<{
      200: {
        headers: never;
        requiredHeaders: never;
        content: {
          "application/json": {
            schema: Recursive;
          };
        };
      };
      400: BadRequest;
    }>;
    x: WideOperationArgument;
    proxy: (url: string) => COUNTERFACT_RESPONSE;
    user: { username?: string; password?: string };
  }>,
) =>
  | {
      status: 200;
      contentType?: "application/json";
      body?: Recursive;
    }
  | {
      status: 400;
      contentType?: "application/json";
      body?: Error;
    }
  | { status: 415; contentType: "text/plain"; body: string }
  | COUNTERFACT_RESPONSE
  | { ALL_REMAINING_HEADERS_ARE_OPTIONAL: COUNTERFACT_RESPONSE };
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 11`] = `
"types/components/schemas/Recursive.ts:import type { Recursive } from "./Recursive.js";

export type Recursive = Recursive;
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 12`] = `
"types/#/components/responses/BadRequest.ts:import type { Error } from "../../../components/schemas/Error.js";

export type BadRequest = {
  headers: never;
  requiredHeaders: never;
  content: {
    "application/json": {
      schema: Error;
    };
  };
};
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 13`] = `
"types/components/schemas/Error.ts:export type Error = { code?: string; message: string };
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 14`] = `
".cache
"
`;

exports[`end-to-end test generates the same code for the example that it did on the last test run 15`] = `
"This directory contains compiled JS files from the paths directory. Do not edit these files directly.
"
`;
